# bisca4_solo_python

./: CMakeLists.txt  LICENSE  README.md  auto.bat  instrucoes.txt  train_nnue.py
android/: README.md  build_android.sh
docs/: android.md
gui/: engine.py  gui.py
matches/: match_runner.cpp
mobile_app/: buildozer.spec  main.py
src/: android_api.cpp  android_api.h  card.cpp  card.h  eval_nnue.cpp  eval_nnue.h  gamestate.cpp  gamestate.h  main.cpp  rand.cpp  rand.h  search.cpp  search.h  search_initial.cpp  search_initial.h  selfplay.cpp  selfplay.h
src_mcts/: main_mcts.cpp  mcts.cpp  mcts.h  selfplay_mcts.cpp  selfplay_mcts.h
